# autobot

./: .dockerignore  .gitignore  Dockerfile  README_GITHUB.md  README_STATUS.md  docker-compose.yml  gemini.cmd  pyproject.toml  single_agent_swarm.py  technical_documentation.json
core/: token_utils.py
legacy/original_swarm/: autoresearch_v4.py  multi_agent_swarm.py  single_agent_swarm_master.py
logs/: metrics.jsonl  swarm_memory.json
src/original_swarm/: openhands_adapter.py
src/original_swarm/agent_fixer/: agent_fixer.py  checkpoints.py  fix_protocol.py
src/original_swarm/agents/: coder.py  critic.py  planner.py
src/original_swarm/core/: __init__.py  compactor.py  config.py  memory_manager.py  query_engine.py  state_manager.py
src/original_swarm/llm/: backend.py
src/original_swarm/schemas/: schemas.py
src/original_swarm/telemetry/: instrumentation.py  metrics_collector.py  otel_tracer.py
src/original_swarm/tools/: validator.py  web_researcher.py
tests/: test_basic.py  test_compactor.py  test_memory_manager.py  test_token_utils.py
