[project]
name = "swarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.87.0",
    "pytest>=9.0.2",
    "pytest-json-report>=1.5.0",
    "requests>=2.33.1",
    "crawl4ai>=0.3.5",
    "duckduckgo-search>=6.0.0",
    "beautifulsoup4>=4.12.3",
    "playwright>=1.42.0",
    "pydantic-ai>=0.0.1",
]
